--- a/assets/css/samples.css
+++ b/assets/css/samples.css
@@ -1,5 +1,16 @@
 map {
-    height: 500px;
-    width: 100%;
-    background-color: #b5d0d0;
-    }
+  height: 500px;
+  width: 100%;
+  background-color: #b5d0d0;
+}
+
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 750px;
+}
+
+img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
